[tool.poetry]
name = "k-and-l-scripts"
version = "0.1.0"
description = ""
authors = ["Lucas Connors <lucas.revolutiontech@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gcsa = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
